Changed background color to green

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,10 @@
+.ui.inverted.segment, .ui.primary.inverted.segment{
+  background: #71b573;
+}
+
+.ui.secondary.inverted.pointing.menu{
+  border: none;
+}
 
 .hidden.menu {
   display: none;
