--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -30,7 +30,7 @@
         </div>
         <div class="seven wide column">
           <h4 class="ui inverted header">Footer Header</h4>
-          <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam suscipit felis eros, ut pretium tellus tincidunt eu.</p>
         </div>
       </div>
       <div class="ui inverted section divider"></div>
