--- a/views/listings.ejs
+++ b/views/listings.ejs
@@ -60,7 +60,8 @@
         <% for(var i=0; i<listings.length; i++) {%>
         <div class="ui ignored info message">
           <h3><%= listings[i].sender %>
-            <span style="float:right;position: relative; display: inline-block; font-size: 12px;"><%= moment(listings[i].date).startOf('day').fromNow();%>
+            <span style="float:right;position: relative; display: inline-block; font-size: 12px;">
+              <%= moment(listings[i].date).startOf('day').fromNow();%>
             </span></h3>
           <p><%= listings[i].message %></p>
         </div>
