Fixed npm start issue on windows

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <!-- Site Properities -->
-  <title>Homepage - Semantic</title>
+  <title>FarmConnecta - Twitter for Farmers</title>
   <link rel="stylesheet" type="text/css" href="../semantic/dist/components/reset.css">
   <link rel="stylesheet" type="text/css" href="../semantic/dist/components/site.css">
 
