--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,27 +9,7 @@
 
 <body>
 
-<!-- Following Menu -->
-<div class="ui large top fixed hidden menu">
-  <div class="ui container">
-    <a class="active item">Home</a>
-    <a class="item">About</a>
-    <a class="item">Company</a>
-    <div class="right menu">
-      <div class="item">
-        <a class="ui button">Log in</a>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Sidebar Menu -->
-<div class="ui vertical inverted sidebar menu">
-  <a class="active item">Home</a>
-  <a class="item">About</a>
-  <a class="item">Company</a>
-  <a class="item">Login</a>
-</div>
+<% include ../views/partials/nav %>
 
 
 <!-- Page Contents -->
