Added links for static pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,6 @@
 
 <% include ../views/partials/nav %>
 
-
 <!-- Page Contents -->
 <div class="pusher">
   <div class="ui inverted vertical masthead center aligned segment">
@@ -22,10 +21,10 @@
           <i class="sidebar icon"></i>
         </a>
         <a class="active item">Home</a>
-        <a class="item">About</a>
-        <a class="item">Company</a>
+        <a class="item" href="/about">About</a>
+        <a class="item" href="/listings">Listings</a>
         <div class="right item">
-          <a class="ui inverted button">Log in</a>
+          <a class="ui inverted button" href="/login">Log in</a>
         </div>
       </div>
     </div>
