Added realtime update for listings page

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -34,6 +34,11 @@
   <script src="../semantic/dist/components/sidebar.js"></script>
   <script src="../semantic/dist/components/form.js"></script>
   <script src="../semantic/dist/components/transition.js"></script>
+
+<script src="https://js.pusher.com/3.0/pusher.min.js"></script>
+
+<script src="../js/main.js"></script>
+
   <script>
   $(document)
     .ready(function() {
