--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -37,6 +37,7 @@
 
 <script src="https://js.pusher.com/3.0/pusher.min.js"></script>
 
+<script src="../js/timeago.js"></script>
 <script src="../js/main.js"></script>
 
   <script>
