updating page info and navigation links

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,7 +10,6 @@
 <body>
 
 <% include ../views/partials/nav %>
-
 <!-- Page Contents -->
 <div class="pusher">
   <div class="ui inverted vertical masthead center aligned segment" style="min-height: 100px;">
@@ -20,32 +19,29 @@
         <a class="toc item">
           <i class="sidebar icon"></i>
         </a>
-        <a class="active item">Home</a>
-        <a class="item" href="/about">About</a>
+        <a class="item" href="">Home</a>
+        <a class="active item" href="/about">About</a>
         <a class="item" href="/listings">Listings</a>
         <div class="right item">
           <a class="ui inverted button" href="/login">Log in</a>
         </div>
       </div>
     </div>
-
   </div>
 
   <div class="ui vertical centered stripe segment">
     <div class="ui text container">
       <h3 class="ui header">About Us</h3>
-
       <div class="ui vertical centered stripe segment">
         <div class="ui text container">
           <h3 class="ui header">We are a farmers' marketplace</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam suscipit felis eros, ut pretium tellus tincidunt eu. Nulla ut imperdiet arcu. Fusce risus eros, molestie non consequat eget, pharetra at orci. Duis id porta nibh. Curabitur tincidunt, urna id posuere porttitor, leo est accumsan enim, et dignissim libero nibh id lorem.</p>
-          <a class="ui large button">Read More</a>
-
+          <p>FarmConnecta is an SMS powered twitter plaform for farmers to market their livestock to local businesses, traders and other farmers.</p>
+          
           <h4 class="ui horizontal header divider"></h4>
 
           <h3 class="ui header">We make it easy to sell livestock</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam suscipit felis eros, ut pretium tellus tincidunt eu. Nulla ut imperdiet arcu. Fusce risus eros, molestie non consequat eget, pharetra at orci. Duis id porta nibh. Curabitur tincidunt, urna id posuere porttitor, leo est accumsan enim, et dignissim libero nibh id lorem.</p>
-          <a class="ui large button">Get Started</a>
+          <p>FarmConnecta allows farmers in remote areas within Botswana to send An SMS to our platform if they have livestock to market. This helps farmers market their cattle in real-time without any hustle of travelling around</p>
+          <a class="ui large button" href="/login">Get Started</a>
         </div>
       </div>
 
