--- a/views/listings.ejs
+++ b/views/listings.ejs
@@ -44,9 +44,9 @@
         <a class="toc item">
           <i class="sidebar icon"></i>
         </a>
-        <a class="active item">Home</a>
+        <a class="item">Home</a>
         <a class="item" href="/about">About</a>
-        <a class="item" href="/listings">Listings</a>
+        <a class="active item" href="/listings">Listings</a>
         <div class="right item">
           <a class="ui inverted button" href="/login">Log in</a>
         </div>
