--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,14 +42,14 @@
     <div class="ui vertical centered stripe segment">
       <div class="ui text container">
         <h3 class="ui header">We are a farmers' marketplace</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam suscipit felis eros, ut pretium tellus tincidunt eu. Nulla ut imperdiet arcu. Fusce risus eros, molestie non consequat eget, pharetra at orci. Duis id porta nibh. Curabitur tincidunt, urna id posuere porttitor, leo est accumsan enim, et dignissim libero nibh id lorem.</p>
-        <a class="ui large button">Read More</a>
+        <p>FarmConnecta is an SMS powered twitter plaform for farmers to market their livestock to local businesses, traders and other farmers. </p>
+        <a class="ui large button " href="/about">Read More</a>
 
         <h4 class="ui horizontal header divider"></h4>
 
         <h3 class="ui header">We make it easy to sell livestock</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam suscipit felis eros, ut pretium tellus tincidunt eu. Nulla ut imperdiet arcu. Fusce risus eros, molestie non consequat eget, pharetra at orci. Duis id porta nibh. Curabitur tincidunt, urna id posuere porttitor, leo est accumsan enim, et dignissim libero nibh id lorem.</p>
-        <a class="ui large button">Get Started</a>
+        <p>FarmConnecta allows farmers in remote areas within Botswana to send An SMS to our platform if they have livestock to market. This helps farmers market their cattle in real-time without any hustle of travelling around.</p>
+        <a class="ui large button" href="/login">Get Started</a>
       </div>
     </div>
 
