--- a/views/ussd/index.html
+++ b/views/ussd/index.html
@@ -1,11 +1,10 @@
-HTTP/1.1 200 OK
-Content-Type: text/html; charset=UTF-8
 <?xml version="1.0" encoding="UTF-8"?>
 <html>
 <body>
-Welcome to my service<br/>
+Welcome to FarmConnecta<br/>
 Please select:<br/>
-<a href="./../index.ejs">Infos</a><br/>
-<a href="./../listings.ejs">Help</a><br/>
+<a href="index.html"> How It Works</a><br/>
+<a href="/subscribe"> Subscribe</a><br/>
+<a href="matimela.html"> Matimela</a><br/>
 </body>
 </html>
