First iteration of listings uusd functionality

--- a/views/ussd/index.html
+++ b/views/ussd/index.html
@@ -3,8 +3,10 @@
 <body>
 Welcome to FarmConnecta<br/>
 Please select:<br/>
-<a href="index.html"> How It Works</a><br/>
+<a href="/listings"> Listings</a><br/>
 <a href="/subscribe"> Subscribe</a><br/>
 <a href="matimela.html"> Matimela</a><br/>
+<a href="index.html"> How It Works</a><br/>
+
 </body>
 </html>
