Improving subscribe functionality

--- a/views/ussd/index.html
+++ b/views/ussd/index.html
@@ -4,7 +4,7 @@
 Welcome to FarmConnecta<br/>
 Please select:<br/>
 <a href="/listings"> Listings</a><br/>
-<a href="/subscribe"> Subscribe</a><br/>
+<a href="/subscribe.html"> Subscribe</a><br/>
 <a href="matimela.html"> Matimela</a><br/>
 <a href="index.html"> How It Works</a><br/>
 
