--- a/views/index.html
+++ b/views/index.html
@@ -30,26 +30,27 @@
     </div>
 <hr>
     <div class="ui text container">
-      <h1 class="ui inverted header">
-        FarmConnecta
-      </h1>
-      <h2>An SMS powered Platform for farmers.</h2>
+<div class="banner">
+
+        <img src="../img/logo.png" class="logo" ><br/>
+        <img src="../img/farmconnecta.png" class="farmconnecta">
+
+      <h2>An SMS powered Livestock Information System.</h2>
       <a class="ui huge primary button" href="/login">Get Started <i class="right arrow icon"></i></a>
+      </div>
     </div>
 
   </div>
 
     <div class="ui vertical centered stripe segment">
       <div class="ui text container">
-        <h3 class="ui header">Livestock Marketing Information</h3>
-        <p>FarmConnecta provides farmers with a platform to market their livestock through SMS which eliminates need of a middle-man which cost farmers more. It also provides reliable livestock marketing information to farmers, for example livestock prices at different markets within Botswana </p>
-        <a class="ui large button " href="/about">Read More</a>
+        <h3 class="ui header">About FarmConnecta</h3>
+        <h2 class="text-justify text-muted">About Us</h2>
+        <p class="text-justify text-muted">FarmConnect is an Agri-tech start-up founded in Botswana. The main goal of Farmconnecta is to provide livestock producers and traders with reliable and timely market information in order to make informed marketing decisions and identify appropriate markets for their livestock. Farmconecta also assists farmers locate their livestock in Matimela(Stray Livestock) kraals. <br/>
 
-        <h4 class="ui horizontal header divider"></h4>
-
-        <h3 class="ui header">Matimela (Lost Animals)</h3>
-        <p>Matimela is defined as any stray livestock. Any stray animal is reported to the nearest Matimela office or Kgotla, This animals will then be collected and registered in the kraal books and marked with the council brand. Farmconnecta helps owners of this lost animals by providing them with an SMS based platform which allows them to query the matimela database and check for their missing cattle in a timely and efficient manner.</p>
-        <a class="ui large button" href="/login">Get Started</a>
+        Our platform connects farmers to a pool of livestock marketing information and matimela knowledge base system through thier mobiles SMS, USSD and web application. 
+         </p>
+       <a class="ui huge primary button" href="/login">Get Started <i class="right arrow icon"></i></a>
       </div>
     </div>
 
